# dsb2-kaggle

./: .gitignore  Makefile.am  Makefile.model  README.md  configure.ac  install-debian-deps.sh
base/: Makefile.am  columnfile-reader.cc  columnfile-select.cc  columnfile-writer.cc  columnfile.h  columnfile_test.cc  file.cc  file.h  region.h  string.cc  string.h  stringref.h  thread-pool.h
data/: .gitignore  README.md
doc/: REPORT.md  SUBMISSIONS.md
doc/data/: tflow-4ch-stack-validation.txt  tflow-minimal-4ch-validation.txt  tflow-minimal-validation.txt  xgboost-minimal-validation.txt
geometry/: Makefile.am  bsp.cc  bsp.h  marching-cubes.cc  marching-cubes.h  vector.h
programs/: create-submission.py
programs/3dviz/: .gitignore  Makefile.am  main.cc  x11.c  x11.h
programs/pandas/: Initial Data Visualization.ipynb  preprocess.py
programs/tensorflow/: preprocess.py  tflow-4ch-stack.py  tflow-minimal.py
programs/tflow-minimal/: tflow-minimal.py
programs/xgboost/: xgboost-minimal.py
python/: Makefile.am  columnfile-reader.cc  columnfile.cc  columnfile.h  dsb2.swig  object.h  string.h
scripts/: load-dicom.py  plot-validation-data.gnuplot
